# voice2machine

./: .gitattributes  .gitignore  .vulture_whitelist.py  2025-01-24.md  404.html  =0.19.0  AGENTES.md  AGENTS (es).md  AGENTS.md  CHANGELOG-GEMINI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LEEME.md  LICENSE  Makefile  PR_NUEVA_INTERFAZ.md  README.md  benchmark_latency.py  config.toml  gemini-helper.sh  index.html  install_service.py  llm_processor.py  mkdocs.yml  objects.inv  package-lock.json  process-clipboard.sh  reproduce_issue.py  requirements-minimal.txt  requirements.txt  sitemap.xml  verify_daemon.py  verify_phase1.py  voice2machine.code-workspace  whisper-toggle.sh
apps/backend/: AGENTS.md  README.md  config.toml  plan.md  pyproject.toml  requirements.txt
apps/backend/docs/: mkdocs.yml
apps/backend/docs/docs/en/: architecture.md  development.md  index.md  standards.md
apps/backend/docs/docs/es/: arquitectura.md  componentes_internos.md  desarrollo.md  estandares.md  gestion_demonio.md  index.md  referencia_api_ipc.md  referencia_configuracion.md  testing.md
apps/backend/logs/: README.md
apps/backend/models/: .gitkeep  README.md
apps/backend/prompts/: LEEME.md  README.md  refine_system.txt
apps/backend/scripts/: README.md
apps/backend/scripts/development/daemon/: start_daemon.sh
apps/backend/scripts/diagnostics/: check_cuda.py  diagnose_audio.py  monitor_resources.py  v2m-verify.sh  verify_export_backend.py
apps/backend/scripts/integrations/: v2m-gemini.sh  v2m-llm.sh
apps/backend/scripts/maintenance/: cleanup.py  cleanup_v2m.sh  repair_libs.sh
apps/backend/scripts/service/: v2m-daemon.sh  v2m-process.sh  v2m-toggle.sh
apps/backend/scripts/service/lib/: notify.sh  v2m-client.py
apps/backend/scripts/setup/: install.sh  install_service.py
apps/backend/scripts/testing/: test_whisper_gpu.py
apps/backend/scripts/utils/: common.sh  list_models.py  send_command.py
apps/backend/src/: README.md
apps/backend/src/v2m/: README.md  __init__.py  client.py  config.py  daemon.py  main.py
apps/backend/src/v2m/application/: README.md  command_handlers.py  commands.py  config_manager.py  llm_service.py  transcription_service.py
apps/backend/src/v2m/core/: README.md  client_session.py  interfaces.py  ipc_protocol.py  logging.py
apps/backend/src/v2m/core/cqrs/: LEEME.md  README.md  command.py  command_bus.py  command_handler.py
apps/backend/src/v2m/core/di/: LEEME.md  README.md  container.py
apps/backend/src/v2m/core/providers/: __init__.py  provider_registry.py
apps/backend/src/v2m/domain/: README.md  audio_stream.py  errors.py  ports.py
apps/backend/src/v2m/infrastructure/: README.md  file_transcription_service.py  gemini_llm_service.py  linux_adapters.py  local_llm_service.py  notification_service.py  ollama_llm_service.py  persistent_model.py  rust_audio_adapter.py  streaming_transcriber.py  system_monitor.py  vad_service.py  whisper_transcription_service.py
apps/backend/src/v2m/infrastructure/audio/: LEEME.md  README.md  recorder.py  recording_worker.py
apps/backend/src/v2m/utils/: env.py  paths.py
apps/backend/src/v2m_engine/: Cargo.toml  README.md
apps/backend/src/v2m_engine/src/: lib.rs
apps/backend/src/voice2machine.egg-info/: PKG-INFO  README.md  SOURCES.txt  requires.txt  top_level.txt
apps/backend/tests/: README.md
apps/backend/tests/integration/: LEEME.md  README.md
apps/backend/tests/unit/: LEEME.md  README.md  test_audio_recorder.py  test_audio_recorder_regressions.py  test_audio_recorder_zero_copy.py  test_config.py  test_container.py  test_daemon_ipc.py  test_linux_adapters_security.py  test_notification_service.py  test_persistent_worker.py  test_provider_registry.py  test_rust_async.py  test_streaming_transcriber.py  test_system_monitor.py  test_vad_service.py
apps/capture/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/capture/src-tauri/capabilities/: default.json
apps/capture/src-tauri/src/: README.md  lib.rs  main.rs
apps/capture/src-tauri/src/audio/: capture.rs  devices.rs  mod.rs  playback.rs  resampler.rs
apps/capture/src-tauri/src/config/: mod.rs  settings.rs
apps/capture/src-tauri/src/output/: clipboard.rs  mod.rs
apps/capture/src-tauri/src/pipeline/: mod.rs  orchestrator.rs
apps/capture/src-tauri/src/transcription/: mod.rs  model.rs  whisper.rs
apps/capture/src-tauri/src/tray/: icon.rs  mod.rs
apps/capture/src-tauri/src/vad/: buffer.rs  detector.rs  mod.rs  state_machine.rs
apps/daemon/backend/: AGENTS.md  README.md  config.toml  pyproject.toml  requirements.txt
apps/daemon/backend/.agent/automated tasks/: README.md
apps/daemon/backend/.agent/automated tasks/01_code_quality/: task.md
apps/daemon/backend/.agent/automated tasks/02_test_verification/: task.md
apps/daemon/backend/.agent/automated tasks/03_environment_maintenance/: task.md
apps/daemon/backend/.agent/automated tasks/04_dependency_management/: task.md
apps/daemon/backend/.agent/automated tasks/bolt in backend/: TASK.md
apps/daemon/backend/.agent/skills/: backend-commit
apps/daemon/backend/.gemini/: .gitignore  settings.json
apps/daemon/backend/resources/prompts/: README.md
apps/daemon/backend/scripts/: README.md
apps/daemon/backend/scripts/development/: create-pr.sh
apps/daemon/backend/scripts/diagnostics/: diagnose_audio.py  health_check.py  v2m-verify.sh  verify_daemon.py
apps/daemon/backend/scripts/setup/: download_model.sh  install.sh  install_llama_cuda.sh  install_service.py
apps/daemon/backend/scripts/shared/: common.sh
apps/daemon/backend/src/v2m/: README.md  __init__.py  main.py
apps/daemon/backend/src/v2m/api/: __init__.py  app.py  (+1 more)
apps/daemon/backend/src/v2m_engine/: Cargo.toml
apps/daemon/backend/src/voice2machine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/daemon/backend/tests/unit/: test_audio_recorder.py  test_audio_recorder_regressions.py  test_audio_recorder_zero_copy.py  test_config.py  test_linux_adapters_security.py  test_notification_service.py  test_persistent_worker.py  test_streaming_transcriber.py  test_zero_copy_shm_bridge.py
(+554 files in other folders)
