[workspace]
resolver = "2"
members = [
    "apps/capture/src-tauri",
]

[workspace.package]
version = "0.1.0"
authors = ["zarvent"]
edition = "2021"
rust-version = "1.81"
license = "GPL-3.0"
repository = "https://github.com/zarvent/voice2machine"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"
