[package]
name = "capture"
version = "0.1.0"
description = "High-performance local voice-to-text utility"
authors = ["zarvent"]
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# --- Tauri Core ---
tauri = { version = "2.0", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Async Runtime ---
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5.0"

# --- Audio Pipeline ---
cpal = "0.15"
rubato = "0.15"
ringbuffer = "0.15"
crossbeam-channel = "0.5"

# --- Sound Playback (for audio cues) ---
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# --- Intelligence ---
whisper-rs = { version = "0.14", default-features = false }
# vad-rs requiere el modelo silero.onnx - se descarga en runtime
# Usando voice_activity_detector que tiene el modelo embebido
voice_activity_detector = "0.2"

# --- Clipboard ---
arboard = "3.4"

# --- Utilities ---
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"

# --- Linux audio backend ---
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal"]
openblas = ["whisper-rs/openblas"]
