[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice2machine"
version = "0.3.0"
description = "Interfaz de Voz a Máquina de última generación (SOTA)"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "faster-whisper",
    "sounddevice",
    "numpy",
    # API Server (SOTA 2026 - reemplaza IPC manual)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    # Config & Validation
    "pydantic>=2.0",
    "pydantic-settings",
    # LLM Backends
    "google-genai",
    # Utils
    "pyyaml",
    "requests",
    "coloredlogs",
    "psutil",
    "uvloop",
    "aiofiles",
    "toml",
    "python-json-logger",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    # Audio/ML Additional
    "silero-vad",
    "ollama>=0.3.0",
]

[tool.ruff]
# Habilitar reglas modernas de Python
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (actualizar sintaxis)
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # reglas específicas de ruff
    "D",   # pydocstyle (Google Style docstrings)
]
ignore = [
    "D100",  # Missing docstring in public module (demasiado estricto)
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
